--- a/index.html
+++ b/index.html
@@ -1,1 +1,122 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Md. Joynal Abedin Parag - Profile</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Md. Joynal Abedin Parag</h1>
+            <p class="title">Software Development Team Lead | IT Expert | Innovator</p>
+            <div class="contact-info">
+                <p>📱 +8801814266295 | 📧 parag.cste@gmail.com</p>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <div class="container">
+            <section class="about">
+                <h2>About Me</h2>
+                <p>With over 12+ years of experience at the intersection of Information Technology, software development, and business development, I've had the privilege of driving innovation and transformation across diverse industries. I'm deeply passionate about harnessing technology to solve complex business challenges.</p>
+            </section>
+
+            <section class="experience">
+                <h2>Job Experiences</h2>
+
+                <div class="job">
+                    <h3>Divergent Technologies Ltd — Software Development Team Lead</h3>
+                    <p><strong>February 2024 – Present</strong></p>
+                    <p>Responsible for Requirement Analysis, System Design, Team Management, and client communication.</p>
+                </div>
+
+                <div class="job">
+                    <h3>Chattogram Development Authority — Assistant Programmer</h3>
+                    <p><strong>September 2021 – January 2024</strong></p>
+                    <p>Completely responsible for Network and Data Security System. Designed, set up, and configured network systems, maintaining all systems on-site and remotely. Database administration and application development.</p>
+                </div>
+
+                <div class="job">
+                    <h3>Samsung R&D Institute Bangladesh — Lead Engineer</h3>
+                    <p><strong>September 2018 – September 2021</strong></p>
+                    <p>Microcontroller-based system design using Arduino and RaspberryPi. Developed applications for in-house usage and clients.</p>
+                </div>
+
+                <div class="job">
+                    <h3>ServicEngineBPO — Sr. Software Engineer</h3>
+                    <p><strong>September 2015 – September 2018</strong></p>
+                    <p>Developed PHP, NodeJS applications for both internal usage and foreign clients.</p>
+                </div>
+
+                <div class="job">
+                    <h3>CloudWell Limited — Software Engineer</h3>
+                    <p><strong>October 2014 – August 2015</strong></p>
+                    <p>Developed REST API server for third parties and API integration with telecom operators.</p>
+                </div>
+
+                <!-- Add more job experiences similarly -->
+            </section>
+
+            <section class="skills">
+                <h2>Skills</h2>
+                <ul>
+                    <li>Languages: C, PHP, Python, C#, JS</li>
+                    <li>Frameworks: Laravel, ASP.NET, Django, Express, Zend, CodeIgniter</li>
+                    <li>Databases: MySQL, PostgreSQL, MongoDB, SQL Server</li>
+                    <li>JS: React, Vue.js, NodeJS</li>
+                    <li>Misc: AWS, REST & SOAP APIs, Linux System Administration, Network Administration</li>
+                </ul>
+            </section>
+
+            <section class="education">
+                <h2>Education</h2>
+                <div class="education-item">
+                    <h3>Noakhali Science & Technology University</h3>
+                    <p>Computer Science & Telecommunication Engineering, 2008 - 2013</p>
+                    <p>CGPA: 3.42/4.0</p>
+                </div>
+
+                <div class="education-item">
+                    <h3>Chittagong Cant Public College</h3>
+                    <p>HSC, Science, 2005 - 2007</p>
+                    <p>GPA: 4.60/5.0</p>
+                </div>
+            </section>
+
+            <section class="projects">
+                <h2>Projects</h2>
+
+                <div class="project">
+                    <h3><a href="https://github.com/joynalabedinparag/Remote-Testing-Platform">Remote Testing Platform</a></h3>
+                    <p>Developed a desktop app to remotely control and test Samsung Air Dresser devices.</p>
+                </div>
+
+                <div class="project">
+                    <h3><a href="https://github.com/joynalabedinparag/Broken-link-checker-python">Test Automation Tools</a></h3>
+                    <p>A tool to recursively search for broken links on websites and visualize results in reports.</p>
+                </div>
+
+                <!-- Add more projects here -->
+            </section>
+
+            <section class="references">
+                <h2>References</h2>
+                <p><strong>Md. Abu Issa Anshary</strong><br>Deputy Chief Town Planner, Chattogram Development Authority<br>📱 +8801817748292 | 📧 plnr.issa@gmail.com</p>
+
+                <p><strong>Abdullah Al Mamun</strong><br>Lab Head, Developer Experience Group, Samsung R&D Institute Bangladesh<br>📱 +8801730726849 | 📧 mamun@samsung.com</p>
+            </section>
+        </div>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Md. Joynal Abedin Parag. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
+</html>
